docs: add global language switcher with per-language SDK pages

--- a/guides/account.mdx
+++ b/guides/account.mdx
@@ -153,7 +153,7 @@ const { data: notifications } = await sdk.self.getNotifications({
 })
 ```
 
-<Card title="SDK Self Module" icon="code" href="/sdk/modules/account">
+<Card title="SDK Self Module" icon="code" href="/sdk/typescript/modules/account">
   Full SDK documentation for account management
 </Card>
 
