--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -167,7 +167,7 @@ Once you have a Connection ID, use it to access OnlyFans data:
     Get subscriber lists and fan data
   </Card>
 
-  <Card title="TypeScript SDK" icon="npm" href="/sdk/quickstart">
+  <Card title="TypeScript SDK" icon="npm" href="/sdk/typescript/quickstart">
     Use our SDK for type-safe development
   </Card>
 
