docs: simplify SDK tab into Libraries & Integrations with grouped sections
Replace version-based SDK navigation with a flat grouped layout:
- Rename 'SDK' tab to 'Libraries & Integrations'
- Add overview landing page with cards for all SDKs, Link Embed, and no-code
- Consolidate each SDK to a single page (install, example, details, features)
- Add Link Embed page extracted from guides
- Remove 56 deep per-language pages (modules, core-concepts, advanced)
- Update redirects to catch old deep URLs

--- a/sdk/typescript/index.mdx
+++ b/sdk/typescript/index.mdx
@@ -1,19 +1,14 @@
 ---
-title: "SDKs"
-description: "Official OFAuth SDK for TypeScript — plus no-code integrations for n8n and Zapier"
+title: "TypeScript SDK"
+sidebarTitle: "TypeScript"
+description: "Official OFAuth TypeScript SDK — full type safety, async iterators, zero dependencies"
 ---
-
-## Official SDK
-
-OFAuth provides a first-party SDK generated from our OpenAPI spec, so types and methods always match the latest API.
 
 ```bash
 npm install @ofauth/onlyfans-sdk
 ```
 
-### Hello, OFAuth
-
-Verify your API key with a single call:
+## Quick Example
 
 ```typescript
 import { createOFAuthClient } from '@ofauth/onlyfans-sdk';
@@ -24,39 +19,7 @@ const account = await client.account.whoami();
 console.log(account.id, account.permissions);
 ```
 
-***
-
-## Feature Highlights
-
-<CardGroup cols={3}>
-  <Card title="Full Type Safety" icon="code">
-    Every SDK is generated from the OpenAPI spec — response types, request params, and error codes are all typed.
-  </Card>
-
-  <Card title="Automatic Pagination" icon="arrows-rotate">
-    Async iterators handle pagination automatically so you can `for-await` over any list.
-  </Card>
-
-  <Card title="Proxy Support" icon="globe">
-    Call any OnlyFans API endpoint directly through the OFAuth proxy when the typed methods don't cover your use case.
-  </Card>
-
-  <Card title="Media Upload" icon="cloud-arrow-up">
-    Upload images and videos with automatic chunking and progress callbacks built into the SDK.
-  </Card>
-
-  <Card title="Webhook Verification" icon="shield-check">
-    Verify incoming webhook signatures to ensure events are authentic — included out of the box.
-  </Card>
-
-  <Card title="Error Handling" icon="triangle-exclamation">
-    The SDK throws typed exceptions (`OFAuthAPIError`) with status, code, and details.
-  </Card>
-</CardGroup>
-
-***
-
-## TypeScript SDK
+## Details
 
 | | TypeScript |
 | --- | --- |
@@ -67,42 +30,62 @@ console.log(account.id, account.permissions);
 | **Types** | Inline types, full IntelliSense |
 | **Pagination** | Async iterators (`for await`) |
 | **Dependencies** | None (uses `fetch`) |
-| **Key Feature** | Nested namespaces (`client.access.listPosts()`) |
 
-***
-
-## No-Code Integrations
-
-Don't want to write code? OFAuth also provides integrations for popular automation platforms:
+## Features
 
 <CardGroup cols={2}>
-  <Card title="n8n" icon="n" href="https://github.com/OFAuth-org/onlyfans-n8n">
-    Community node for n8n workflows. Connect OFAuth to 400+ other services with drag-and-drop automation.
+  <Card title="Full Type Safety" icon="code">
+    Generated from the OpenAPI spec — response types, request params, and error codes are all typed.
   </Card>
 
-  <Card title="Zapier" icon="bolt" href="https://github.com/OFAuth-org/onlyfans-zapier">
-    Zapier integration with typed input fields. Build automated workflows without writing a single line of code.
+  <Card title="Async Iterators" icon="arrows-rotate">
+    `for await` over any paginated list automatically.
+  </Card>
+
+  <Card title="Proxy Support" icon="globe">
+    Call any OnlyFans endpoint directly through the OFAuth proxy.
+  </Card>
+
+  <Card title="Media Upload" icon="cloud-arrow-up">
+    Automatic chunking and progress callbacks.
   </Card>
 </CardGroup>
 
-***
+## Usage Examples
 
-## Get Started
+### List subscribers
 
-<CardGroup cols={2}>
-  <Card title="Quickstart" icon="rocket" href="/sdk/typescript/quickstart">
-    Install the SDK and make your first API call in under 5 minutes
-  </Card>
+```typescript
+const subscribers = await client.access.listSubscribers({
+  connectionId: 'conn_xxx',
+  limit: 50
+});
 
-  <Card title="Architecture" icon="sitemap" href="/sdk/typescript/core-concepts/architecture">
-    Understand how the SDK is structured and how it maps to the API
-  </Card>
+for (const sub of subscribers.data) {
+  console.log(sub.username, sub.subscribedAt);
+}
+```
 
-  <Card title="Configuration" icon="gear" href="/sdk/typescript/core-concepts/configuration">
-    Connection IDs, custom base URLs, proxy setup, and advanced options
-  </Card>
+### Send a message
 
-  <Card title="Error Handling" icon="triangle-exclamation" href="/sdk/typescript/advanced/error-handling">
-    Typed exceptions, retry strategies, and debugging tips
-  </Card>
-</CardGroup>
+```typescript
+await client.access.sendMessage({
+  connectionId: 'conn_xxx',
+  userId: '12345',
+  text: 'Hello from OFAuth!'
+});
+```
+
+### Error handling
+
+```typescript
+import { OFAuthAPIError } from '@ofauth/onlyfans-sdk';
+
+try {
+  await client.access.getUser({ connectionId: 'conn_xxx', userId: '999' });
+} catch (err) {
+  if (err instanceof OFAuthAPIError) {
+    console.error(err.status, err.code, err.message);
+  }
+}
+```
