--- a/sdk/csharp/index.mdx
+++ b/sdk/csharp/index.mdx
@@ -1,19 +1,14 @@
 ---
-title: "SDKs"
-description: "Official OFAuth SDK for C# — plus no-code integrations for n8n and Zapier"
+title: "C# SDK"
+sidebarTitle: "C#"
+description: "Official OFAuth C# SDK — DI support, CancellationToken, 473 model classes"
 ---
-
-## Official SDK
-
-OFAuth provides a first-party SDK generated from our OpenAPI spec, so types and methods always match the latest API.
 
 ```bash
 dotnet add package OnlyFans.SDK
 ```
 
-### Hello, OFAuth
-
-Verify your API key with a single call:
+## Quick Example
 
 ```csharp
 using OFAuth;
@@ -24,39 +19,7 @@ var account = await client.GetAsync<WhoamiResponse>("/v2/account/whoami");
 Console.WriteLine($"{account.Id} {string.Join(", ", account.Permissions)}");
 ```
 
-***
-
-## Feature Highlights
-
-<CardGroup cols={3}>
-  <Card title="Full Type Safety" icon="code">
-    Every SDK is generated from the OpenAPI spec — response types, request params, and error codes are all typed.
-  </Card>
-
-  <Card title="Automatic Pagination" icon="arrows-rotate">
-    Manual pagination with query parameters for full control over paging through results.
-  </Card>
-
-  <Card title="Proxy Support" icon="globe">
-    Call any OnlyFans API endpoint directly through the OFAuth proxy when the typed methods don't cover your use case.
-  </Card>
-
-  <Card title="Media Upload" icon="cloud-arrow-up">
-    Upload images and videos with automatic chunking and progress callbacks built into the SDK.
-  </Card>
-
-  <Card title="Webhook Verification" icon="shield-check">
-    Verify incoming webhook signatures to ensure events are authentic — included out of the box.
-  </Card>
-
-  <Card title="Error Handling" icon="triangle-exclamation">
-    The SDK throws typed exceptions (`OFAuthException`) with status, code, and details.
-  </Card>
-</CardGroup>
-
-***
-
-## C# SDK
+## Details
 
 | | C# |
 | --- | --- |
@@ -67,42 +30,64 @@ Console.WriteLine($"{account.Id} {string.Join(", ", account.Permissions)}");
 | **Types** | Generated classes with `JsonPropertyName` |
 | **Pagination** | Manual (query params) |
 | **Dependencies** | `System.Net.Http`, `System.Text.Json` |
-| **Key Feature** | DI support, `CancellationToken` |
 
-***
-
-## No-Code Integrations
-
-Don't want to write code? OFAuth also provides integrations for popular automation platforms:
+## Features
 
 <CardGroup cols={2}>
-  <Card title="n8n" icon="n" href="https://github.com/OFAuth-org/onlyfans-n8n">
-    Community node for n8n workflows. Connect OFAuth to 400+ other services with drag-and-drop automation.
+  <Card title="DI Support" icon="code">
+    Register `OFAuthClient` in your DI container with `IHttpClientFactory`.
   </Card>
 
-  <Card title="Zapier" icon="bolt" href="https://github.com/OFAuth-org/onlyfans-zapier">
-    Zapier integration with typed input fields. Build automated workflows without writing a single line of code.
+  <Card title="CancellationToken" icon="circle-stop">
+    Every async method accepts `CancellationToken` for cooperative cancellation.
+  </Card>
+
+  <Card title="Proxy Support" icon="globe">
+    Call any OnlyFans endpoint directly through the OFAuth proxy.
+  </Card>
+
+  <Card title="Media Upload" icon="cloud-arrow-up">
+    Automatic chunking and progress callbacks.
   </Card>
 </CardGroup>
 
-***
+## Usage Examples
 
-## Get Started
+### List subscribers
 
-<CardGroup cols={2}>
-  <Card title="Quickstart" icon="rocket" href="/sdk/csharp/quickstart">
-    Install the SDK and make your first API call in under 5 minutes
-  </Card>
+```csharp
+var subs = await client.GetAsync<ListSubscribersResponse>(
+    "/v2/access/subscribers?limit=50",
+    connectionId: "conn_xxx"
+);
 
-  <Card title="Architecture" icon="sitemap" href="/sdk/csharp/core-concepts/architecture">
-    Understand how the SDK is structured and how it maps to the API
-  </Card>
+foreach (var sub in subs.Data)
+{
+    Console.WriteLine($"{sub.Username} {sub.SubscribedAt}");
+}
+```
 
-  <Card title="Configuration" icon="gear" href="/sdk/csharp/core-concepts/configuration">
-    Connection IDs, custom base URLs, proxy setup, and advanced options
-  </Card>
+### Send a message
 
-  <Card title="Error Handling" icon="triangle-exclamation" href="/sdk/csharp/advanced/error-handling">
-    Typed exceptions, retry strategies, and debugging tips
-  </Card>
-</CardGroup>
+```csharp
+await client.PostAsync("/v2/access/chats/12345/messages",
+    new { text = "Hello from OFAuth!" },
+    connectionId: "conn_xxx"
+);
+```
+
+### Error handling
+
+```csharp
+try
+{
+    await client.GetAsync<UserResponse>(
+        "/v2/access/users/999",
+        connectionId: "conn_xxx"
+    );
+}
+catch (OFAuthException ex)
+{
+    Console.WriteLine($"{ex.Status} {ex.Code} {ex.Message}");
+}
+```
