--- a/sdk/go/index.mdx
+++ b/sdk/go/index.mdx
@@ -1,19 +1,14 @@
 ---
 title: "Go SDK"
-description: "Official OFAuth Go SDK — zero dependencies, context-based cancellation, and 126+ typed methods"
+sidebarTitle: "Go"
+description: "Official OFAuth Go SDK — zero dependencies, context-based cancellation, 126+ typed methods"
 ---
-
-## Official SDK
-
-OFAuth provides a first-party Go SDK generated from our OpenAPI spec, so types and methods always match the latest API.
 
 ```bash
 go get github.com/ofauth-org/onlyfans-sdk-go
 ```
 
-### Hello, OFAuth
-
-Verify your API key with a single call:
+## Quick Example
 
 ```go
 package main
@@ -38,39 +33,7 @@ func main() {
 }
 ```
 
-***
-
-## Feature Highlights
-
-<CardGroup cols={3}>
-  <Card title="Full Type Safety" icon="code">
-    Every SDK is generated from the OpenAPI spec — response types, request params, and error codes are all typed.
-  </Card>
-
-  <Card title="Automatic Pagination" icon="arrows-rotate">
-    Manual pagination with typed query parameters and `HasMore` flag for efficient offset-based iteration.
-  </Card>
-
-  <Card title="Proxy Support" icon="globe">
-    Call any OnlyFans API endpoint directly through the OFAuth proxy when the typed methods don't cover your use case.
-  </Card>
-
-  <Card title="Media Upload" icon="cloud-arrow-up">
-    Upload images and videos with automatic chunking and progress callbacks built into the SDK.
-  </Card>
-
-  <Card title="Webhook Verification" icon="shield-check">
-    Verify incoming webhook signatures to ensure events are authentic — included out of the box.
-  </Card>
-
-  <Card title="Error Handling" icon="triangle-exclamation">
-    The SDK returns typed `*APIError` values with status, code, and details for precise error handling.
-  </Card>
-</CardGroup>
-
-***
-
-## SDK Details
+## Details
 
 | | Go |
 | --- | --- |
@@ -81,42 +44,66 @@ func main() {
 | **Types** | Generated response structs |
 | **Pagination** | Manual (query params) |
 | **Dependencies** | Zero (standard library) |
-| **Key Feature** | Context-based cancellation |
 
-***
-
-## No-Code Integrations
-
-Don't want to write code? OFAuth also provides integrations for popular automation platforms:
+## Features
 
 <CardGroup cols={2}>
-  <Card title="n8n" icon="n" href="https://github.com/OFAuth-org/onlyfans-n8n">
-    Community node for n8n workflows. Connect OFAuth to 400+ other services with drag-and-drop automation.
+  <Card title="Context Cancellation" icon="code">
+    Every method accepts `context.Context` for timeouts and cancellation.
   </Card>
 
-  <Card title="Zapier" icon="bolt" href="https://github.com/OFAuth-org/onlyfans-zapier">
-    Zapier integration with typed input fields. Build automated workflows without writing a single line of code.
+  <Card title="Zero Dependencies" icon="box">
+    Built entirely on Go's standard library.
+  </Card>
+
+  <Card title="Proxy Support" icon="globe">
+    Call any OnlyFans endpoint directly through the OFAuth proxy.
+  </Card>
+
+  <Card title="Media Upload" icon="cloud-arrow-up">
+    Automatic chunking and progress callbacks.
   </Card>
 </CardGroup>
 
-***
+## Usage Examples
 
-## Get Started
+### List subscribers
 
-<CardGroup cols={2}>
-  <Card title="Quickstart" icon="rocket" href="/sdk/go/quickstart">
-    Install the SDK and make your first API call in under 5 minutes
-  </Card>
+```go
+subs, err := client.ListSubscribers(ctx, &ofauth.ListSubscribersParams{
+    ConnectionID: "conn_xxx",
+    Limit:        50,
+})
+if err != nil {
+    log.Fatal(err)
+}
 
-  <Card title="Architecture" icon="sitemap" href="/sdk/go/core-concepts/architecture">
-    Understand how the SDK is structured and how it maps to the API
-  </Card>
+for _, sub := range subs.Data {
+    fmt.Println(sub.Username, sub.SubscribedAt)
+}
+```
 
-  <Card title="Configuration" icon="gear" href="/sdk/go/core-concepts/configuration">
-    Connection IDs, custom base URLs, proxy setup, and advanced options
-  </Card>
+### Send a message
 
-  <Card title="Error Handling" icon="triangle-exclamation" href="/sdk/go/advanced/error-handling">
-    Typed exceptions, retry strategies, and debugging tips
-  </Card>
-</CardGroup>
+```go
+err := client.SendMessage(ctx, &ofauth.SendMessageParams{
+    ConnectionID: "conn_xxx",
+    UserID:       "12345",
+    Text:         "Hello from OFAuth!",
+})
+```
+
+### Error handling
+
+```go
+_, err := client.GetUser(ctx, &ofauth.GetUserParams{
+    ConnectionID: "conn_xxx",
+    UserID:       "999",
+})
+if err != nil {
+    var apiErr *ofauth.APIError
+    if errors.As(err, &apiErr) {
+        fmt.Println(apiErr.Status, apiErr.Code, apiErr.Message)
+    }
+}
+```
