--- a/sdk/python/index.mdx
+++ b/sdk/python/index.mdx
@@ -1,19 +1,14 @@
 ---
-title: "SDKs"
-description: "Official OFAuth Python SDK — plus no-code integrations for n8n and Zapier"
+title: "Python SDK"
+sidebarTitle: "Python"
+description: "Official OFAuth Python SDK — Pydantic v2 models, functional API, httpx-based"
 ---
-
-## Official SDK
-
-OFAuth provides a first-party Python SDK generated from our OpenAPI spec, so types and methods always match the latest API.
 
 ```bash
 pip install onlyfans-sdk
 ```
 
-### Hello, OFAuth
-
-Verify your API key with a single call:
+## Quick Example
 
 ```python
 from onlyfans_sdk import OFAuthClient, account
@@ -24,39 +19,7 @@ result = account.whoami(client)
 print(result["id"], result["permissions"])
 ```
 
-***
-
-## Feature Highlights
-
-<CardGroup cols={3}>
-  <Card title="Full Type Safety" icon="code">
-    Every SDK is generated from the OpenAPI spec — response types, request params, and error codes are all typed.
-  </Card>
-
-  <Card title="Automatic Pagination" icon="arrows-rotate">
-    Generators handle pagination automatically so you can `for ... in` over any list.
-  </Card>
-
-  <Card title="Proxy Support" icon="globe">
-    Call any OnlyFans API endpoint directly through the OFAuth proxy when the typed methods don't cover your use case.
-  </Card>
-
-  <Card title="Media Upload" icon="cloud-arrow-up">
-    Upload images and videos with automatic chunking and progress callbacks built into the SDK.
-  </Card>
-
-  <Card title="Webhook Verification" icon="shield-check">
-    Verify incoming webhook signatures to ensure events are authentic — included out of the box.
-  </Card>
-
-  <Card title="Error Handling" icon="triangle-exclamation">
-    The SDK throws typed exceptions (`OFAuthError`) with status, code, and details.
-  </Card>
-</CardGroup>
-
-***
-
-## SDK Details
+## Details
 
 | | Python |
 | --- | --- |
@@ -67,42 +30,62 @@ print(result["id"], result["permissions"])
 | **Types** | Pydantic v2 models |
 | **Pagination** | Generators (`for ... in`) |
 | **Dependencies** | `httpx` |
-| **Key Feature** | Functional API (`posts.list_posts(client)`) |
 
-***
-
-## No-Code Integrations
-
-Don't want to write code? OFAuth also provides integrations for popular automation platforms:
+## Features
 
 <CardGroup cols={2}>
-  <Card title="n8n" icon="n" href="https://github.com/OFAuth-org/onlyfans-n8n">
-    Community node for n8n workflows. Connect OFAuth to 400+ other services with drag-and-drop automation.
+  <Card title="Pydantic Models" icon="code">
+    All responses are validated Pydantic v2 models with full type hints.
   </Card>
 
-  <Card title="Zapier" icon="bolt" href="https://github.com/OFAuth-org/onlyfans-zapier">
-    Zapier integration with typed input fields. Build automated workflows without writing a single line of code.
+  <Card title="Generator Pagination" icon="arrows-rotate">
+    `for ... in` over any paginated list automatically.
+  </Card>
+
+  <Card title="Proxy Support" icon="globe">
+    Call any OnlyFans endpoint directly through the OFAuth proxy.
+  </Card>
+
+  <Card title="Media Upload" icon="cloud-arrow-up">
+    Automatic chunking and progress callbacks.
   </Card>
 </CardGroup>
 
-***
+## Usage Examples
 
-## Get Started
+### List subscribers
 
-<CardGroup cols={2}>
-  <Card title="Quickstart" icon="rocket" href="/sdk/python/quickstart">
-    Install the SDK and make your first API call in under 5 minutes
-  </Card>
+```python
+from onlyfans_sdk import access
 
-  <Card title="Architecture" icon="sitemap" href="/sdk/python/core-concepts/architecture">
-    Understand how the SDK is structured and how it maps to the API
-  </Card>
+subscribers = access.list_subscribers(
+    client,
+    connection_id="conn_xxx",
+    limit=50
+)
 
-  <Card title="Configuration" icon="gear" href="/sdk/python/core-concepts/configuration">
-    Connection IDs, custom base URLs, proxy setup, and advanced options
-  </Card>
+for sub in subscribers["data"]:
+    print(sub["username"], sub["subscribed_at"])
+```
 
-  <Card title="Error Handling" icon="triangle-exclamation" href="/sdk/python/advanced/error-handling">
-    Typed exceptions, retry strategies, and debugging tips
-  </Card>
-</CardGroup>
+### Send a message
+
+```python
+access.send_message(
+    client,
+    connection_id="conn_xxx",
+    user_id="12345",
+    text="Hello from OFAuth!"
+)
+```
+
+### Error handling
+
+```python
+from onlyfans_sdk import OFAuthError
+
+try:
+    access.get_user(client, connection_id="conn_xxx", user_id="999")
+except OFAuthError as e:
+    print(e.status, e.code, e.message)
+```
