--- a/guides/how-to/mass-message.mdx
+++ b/guides/how-to/mass-message.mdx
@@ -176,6 +176,10 @@ const response = await fetch("https://api.ofauth.com/v2/access/mass-messages", {
 })
 ```
 
+<Info>
+  `mediaItems` accepts vault media IDs, upload references (`mediaUploadId`), and `http(s)` URLs. See the [`mediaItems` reference](/guides/media-items).
+</Info>
+
 ***
 
 ## Schedule for Later
@@ -366,8 +370,8 @@ sendPromoToActiveSubscribers()
 
 | Option                | Type      | Description                             |
 | --------------------- | --------- | --------------------------------------- |
-| `text`                | string    | Message content (supports markdown)     |
-| `mediaItems`          | number\[] | Media IDs from vault                    |
+| `text`                | string    | Message content (supports [markdown](/guides/how-to/text-formatting)) |
+| `mediaItems`          | (number\|string)\[] | Media IDs, upload references, or URLs (see [`mediaItems` reference](/guides/media-items)) |
 | `price`               | number    | PPV price ($3-$200)                     |
 | `previewMediaCount`   | number    | Preview items before paywall            |
 | `isLockedText`        | boolean   | Lock text behind paywall                |
