--- a/guides/how-to/send-message.mdx
+++ b/guides/how-to/send-message.mdx
@@ -110,17 +110,10 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
 
 ### What You Can Pass in `mediaItems`
 
-The `mediaItems` array accepts several formats:
-
-| Format                      | Example                           | Description                             |
-| --------------------------- | --------------------------------- | --------------------------------------- |
-| **Vault Media ID**          | `12345`                           | Direct OnlyFans vault media ID (number) |
-| **Vault Media ID (string)** | `"12345"`                         | Same as above, auto-converted to number |
-| **Upload Reference**        | `"ofauth_upload_abc123..."`       | The `mediaUploadId` from upload flow    |
-| **URL**                     | `"https://example.com/image.jpg"` | External HTTP/HTTPS URL                 |
+See the [`mediaItems` reference](/guides/media-items) for the complete list of accepted formats and edge cases.
 
 <Tip>
-  **Recommended**: Use the upload reference (`mediaUploadId`) directly! After completing an upload, you can pass the `mediaUploadId` string to `mediaItems` without needing to extract the vault ID yourself.
+  **Recommended**: Use the upload reference (`mediaUploadId`) directly. After completing an upload, you can pass the `mediaUploadId` string to `mediaItems` and OFAuth will resolve it to the vault ID.
 </Tip>
 
 ```javascript
@@ -132,7 +125,7 @@ await completeUpload({ mediaUploadId })
 // Use mediaUploadId directly - system resolves to vault ID automatically
 body: JSON.stringify({
   text: "New content!",
-  mediaItems: [mediaUploadId]  // "ofauth_upload_abc123..."
+  mediaItems: [mediaUploadId]  // e.g. "upload:550e8400-e29b-41d4-a716-446655440000"
 })
 
 // Option 2: Use vault IDs if you already have them
@@ -180,6 +173,10 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
 ## Text Formatting
 
 Messages support markdown formatting by default:
+
+<Tip>
+  See [Text Formatting Guide](/guides/how-to/text-formatting) for the full formatting reference.
+</Tip>
 
 ```javascript
 const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/messages", {
