--- a/guides/messaging.mdx
+++ b/guides/messaging.mdx
@@ -343,7 +343,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/mass-messages/MAS
 | Field               | Type                | Description                                                           |
 | ------------------- | ------------------- | --------------------------------------------------------------------- |
 | `text`              | string              | Message content ([supports markdown](/guides/how-to/text-formatting)) |
-| `mediaItems`        | (number\|string)\[] | Media references (see below)                                          |
+| `mediaItems`        | (number\|string)\[] | Media references (see [`mediaItems` reference](/guides/media-items))  |
 | `price`             | number              | PPV price ($3-$200)                                                   |
 | `isLockedText`      | boolean             | Lock text behind paywall                                              |
 | `previewMediaCount` | number              | Number of preview media items                                         |
@@ -357,14 +357,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/mass-messages/MAS
 
 ### `mediaItems` Formats
 
-The `mediaItems` array accepts:
-
-| Format            | Example                  | Description                      |
-| ----------------- | ------------------------ | -------------------------------- |
-| Vault Media ID    | `12345`                  | Direct OnlyFans vault media ID   |
-| Vault ID (string) | `"12345"`                | Auto-converted to number         |
-| Upload Reference  | `"ofauth_upload_abc..."` | `mediaUploadId` from upload flow |
-| URL               | `"https://..."`          | External HTTP/HTTPS URL          |
+See the [`mediaItems` reference](/guides/media-items).
 
 <Tip>
   You can pass the `mediaUploadId` from the upload flow directly - the API resolves it to the vault ID automatically. Upload references are single-use.
