--- a/guides/content.mdx
+++ b/guides/content.mdx
@@ -204,13 +204,9 @@ const response = await fetch("https://api.ofauth.com/v2/access/posts/POST_ID", {
 | `fundRaisingTargetAmount` | number              | Fundraising goal (min \$10)      |
 | `fundRaisingTipsPresets`  | number\[]           | Tip amount presets (max 4)       |
 
-### `mediaItems` Formats
-
-See the [`mediaItems` reference](/guides/media-items).
-
-<Tip>
-  You can pass the `mediaUploadId` from the upload flow directly - the API resolves it to the vault ID automatically. Upload references are single-use.
-</Tip>
+<Info>
+  For all accepted `mediaItems` values and validation rules, see the [`mediaItems` reference](/guides/media-items).
+</Info>
 
 ***
 
