--- a/guides/how-to/create-post.mdx
+++ b/guides/how-to/create-post.mdx
@@ -88,35 +88,9 @@ const response = await fetch("https://api.ofauth.com/v2/access/posts", {
 })
 ```
 
-### What You Can Pass in `mediaItems`
-
-See the [`mediaItems` reference](/guides/media-items) for the complete list of accepted formats and edge cases.
-
-<Tip>
-  **Recommended**: Use the upload reference (`mediaUploadId`) directly! After completing an upload, pass the `mediaUploadId` string to `mediaItems` - the system resolves it to the vault ID automatically.
-</Tip>
-
-```javascript
-// Option 1: Use upload reference directly (recommended)
-const { mediaUploadId } = await initUpload(...)
-await uploadFile(mediaUploadId, fileBuffer)
-await completeUpload({ mediaUploadId })
-
-body: JSON.stringify({
-  text: "New post!",
-  mediaItems: [mediaUploadId]  // e.g. "upload:550e8400-e29b-41d4-a716-446655440000"
-})
-
-// Option 2: Use vault IDs if you already have them
-body: JSON.stringify({
-  text: "New post!",
-  mediaItems: [12345, 67890]  // Direct vault media IDs
-})
-```
-
-<Warning>
-  Upload references are single-use. Once used in a post or message, they're consumed and cannot be reused.
-</Warning>
+<Info>
+  For all accepted `mediaItems` values (vault IDs, upload references, URLs) and validation rules, see the [`mediaItems` reference](/guides/media-items).
+</Info>
 
 ---
 
