--- a/guides/how-to/send-message.mdx
+++ b/guides/how-to/send-message.mdx
@@ -108,36 +108,9 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
 })
 ```
 
-### What You Can Pass in `mediaItems`
-
-See the [`mediaItems` reference](/guides/media-items) for the complete list of accepted formats and edge cases.
-
-<Tip>
-  **Recommended**: Use the upload reference (`mediaUploadId`) directly. After completing an upload, you can pass the `mediaUploadId` string to `mediaItems` and OFAuth will resolve it to the vault ID.
-</Tip>
-
-```javascript
-// Option 1: Use upload reference directly (recommended)
-const { mediaUploadId } = await initUpload(...)
-await uploadFile(mediaUploadId, fileBuffer)
-await completeUpload({ mediaUploadId })
-
-// Use mediaUploadId directly - system resolves to vault ID automatically
-body: JSON.stringify({
-  text: "New content!",
-  mediaItems: [mediaUploadId]  // e.g. "upload:550e8400-e29b-41d4-a716-446655440000"
-})
-
-// Option 2: Use vault IDs if you already have them
-body: JSON.stringify({
-  text: "New content!",
-  mediaItems: [12345, 67890]  // Direct vault media IDs
-})
-```
-
-<Warning>
-  Upload references are single-use. Once used in a message or post, they're consumed and cannot be reused.
-</Warning>
+<Info>
+  For all accepted `mediaItems` values (vault IDs, upload references, URLs) and validation rules, see the [`mediaItems` reference](/guides/media-items).
+</Info>
 
 ***
 
