--- a/guides/messaging.mdx
+++ b/guides/messaging.mdx
@@ -355,13 +355,9 @@ const response = await fetch("https://api.ofauth.com/v2/access/mass-messages/MAS
   Use markdown formatting like `**bold**`, `*italic*`, and `# headers` in your messages. See [Text Formatting Guide](/guides/how-to/text-formatting) for all options.
 </Tip>
 
-### `mediaItems` Formats
-
-See the [`mediaItems` reference](/guides/media-items).
-
-<Tip>
-  You can pass the `mediaUploadId` from the upload flow directly - the API resolves it to the vault ID automatically. Upload references are single-use.
-</Tip>
+<Info>
+  For all accepted `mediaItems` values and validation rules, see the [`mediaItems` reference](/guides/media-items).
+</Info>
 
 ### Queue-specific Options
 
