--- a/guides/how-to/mass-message.mdx
+++ b/guides/how-to/mass-message.mdx
@@ -373,7 +373,7 @@ sendPromoToActiveSubscribers()
 | `text`                | string    | Message content (supports [markdown](/guides/how-to/text-formatting)) |
 | `mediaItems`          | (number\|string)\[] | Media IDs, upload references, or URLs (see [`mediaItems` reference](/guides/media-items)) |
 | `price`               | number    | PPV price ($3-$200)                     |
-| `previewMediaCount`   | number    | Preview items before paywall            |
+| `previewMediaCount`   | number    | How many of the `mediaItems` should be "previews" |
 | `isLockedText`        | boolean   | Lock text behind paywall                |
 | `userIds`             | number\[] | Specific user IDs to target             |
 | `userLists`           | number\[] | User list IDs to target                 |
