--- a/guides/how-to/send-message.mdx
+++ b/guides/how-to/send-message.mdx
@@ -138,7 +138,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
 | Option              | Type    | Description                             |
 | ------------------- | ------- | --------------------------------------- |
 | `price`             | number  | PPV price in USD ($3 min, $200 max)     |
-| `previewMediaCount` | number  | How many media items to show as preview |
+| `previewMediaCount` | number  | How many of the `mediaItems` should be "previews" |
 | `isLockedText`      | boolean | Also lock the text behind paywall       |
 
 ***
