--- a/guides/content.mdx
+++ b/guides/content.mdx
@@ -198,7 +198,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/posts/POST_ID", {
 | `mediaItems`              | (number\|string)\[] | Media references (see [`mediaItems` reference](/guides/media-items)) |
 | `price`                   | number              | PPV price ($3-$200, optional)    |
 | `isLockedText`            | boolean             | Lock text behind paywall         |
-| `previewMediaCount`       | number              | How many of the `mediaItems` should be "previews" |
+| `previewMediaCount`       | number              | How many `mediaItems` are previews. Uses the first N items from left to right. |
 | `scheduledDate`           | string              | ISO date for scheduled posting   |
 | `expireAfter`             | number              | Days until post expires (1-30)   |
 | `fundRaisingTargetAmount` | number              | Fundraising goal (min \$10)      |
