--- a/guides/how-to/create-post.mdx
+++ b/guides/how-to/create-post.mdx
@@ -110,7 +110,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/posts", {
     text: "Exclusive content! 🔒 Unlock to see more...",
     mediaItems: [12345, 12346],
     price: 14.99,             // Price in USD ($3-$200)
-    previewMediaCount: 1      // Show 1 item as preview
+    previewMediaCount: 1      // First 1 item in mediaItems (left to right) is preview
   })
 })
 ```
@@ -120,7 +120,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/posts", {
 | Option | Type | Description |
 |--------|------|-------------|
 | `price` | number | PPV price in USD ($3 min, $200 max) |
-| `previewMediaCount` | number | How many of the `mediaItems` should be "previews" |
+| `previewMediaCount` | number | How many `mediaItems` are previews. Uses the first N items from left to right. |
 | `isLockedText` | boolean | Also hide the caption until purchased |
 
 ---
@@ -338,7 +338,7 @@ createPostWithMedia(imageBuffer, "New photo! 📸")
 | `mediaItems` | number[] | Array of media IDs from vault |
 | `price` | number | PPV price ($3-$200) |
 | `isLockedText` | boolean | Lock caption behind paywall |
-| `previewMediaCount` | number | How many of the `mediaItems` should be "previews" |
+| `previewMediaCount` | number | How many `mediaItems` are previews. Uses the first N items from left to right. |
 | `scheduledDate` | string | ISO date for scheduled posting |
 | `expireAfter` | number | Days until auto-delete (1-30) |
 | `fundRaisingTargetAmount` | number | Fundraising goal (min $10) |
