--- a/guides/how-to/send-message.mdx
+++ b/guides/how-to/send-message.mdx
@@ -130,7 +130,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
     text: "Exclusive content just for you 💋",
     mediaItems: [12345],
     price: 9.99,              // Price in USD ($3-$200)
-    previewMediaCount: 1      // Number of preview items before paywall
+    previewMediaCount: 1      // First 1 item in mediaItems (left to right) is preview
   })
 })
 ```
@@ -138,7 +138,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/USER_ID/mes
 | Option              | Type    | Description                             |
 | ------------------- | ------- | --------------------------------------- |
 | `price`             | number  | PPV price in USD ($3 min, $200 max)     |
-| `previewMediaCount` | number  | How many of the `mediaItems` should be "previews" |
+| `previewMediaCount` | number  | How many `mediaItems` are previews. Uses the first N items from left to right. |
 | `isLockedText`      | boolean | Also lock the text behind paywall       |
 
 ***
