--- a/guides/messaging.mdx
+++ b/guides/messaging.mdx
@@ -182,7 +182,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/chats/123456/mess
     text: "Exclusive content just for you 💋",
     mediaItems: [789],
     price: 9.99,  // $3-$200
-    previewMediaCount: 1  // Number of preview items
+    previewMediaCount: 1  // First 1 item in mediaItems (left to right) is preview
   })
 })
 ```
@@ -346,7 +346,7 @@ const response = await fetch("https://api.ofauth.com/v2/access/mass-messages/MAS
 | `mediaItems`        | (number\|string)\[] | Media references (see [`mediaItems` reference](/guides/media-items))  |
 | `price`             | number              | PPV price ($3-$200)                                                   |
 | `isLockedText`      | boolean             | Lock text behind paywall                                              |
-| `previewMediaCount` | number              | How many of the `mediaItems` should be "previews"                     |
+| `previewMediaCount` | number              | How many `mediaItems` are previews. Uses the first N items from left to right. |
 | `isMarkdown`        | boolean             | Parse text as markdown (default: true)                                |
 | `userTags`          | number\[]           | Tag users in message                                                  |
 | `releaseForms`      | object              | Release form attachments                                              |
