--- a/guides/how-to/mass-message.mdx
+++ b/guides/how-to/mass-message.mdx
@@ -207,14 +207,14 @@ console.log("Message scheduled for:", result.scheduledDate)
 
 ***
 
-## List Mass Messages
+## List Sent Mass Messages
 
-Check the status of your mass messages:
+Check the stats of your sent mass messages:
 
 ```javascript
-// Get all mass messages
+// Get sent mass message stats
 const response = await fetch(
-  "https://api.ofauth.com/v2/access/mass-messages?limit=10",
+  "https://api.ofauth.com/v2/access/analytics/mass-messages/sent?limit=10",
   { headers }
 )
 
